# $Id$

2008-12-26	Ivan Y. Khvostishkov

	* main/DAOs/GenericDAO.class.php, test/misc/DAOTest.class.php:
	preserve object's persistence during manipulations with identity map;
	unit test for covering such change.

2008-12-24	Vladlen Y. Koshelev

	* meta/types/ObjectType.class.php: lazy required property getter checks for
	property's id.

	* main/DAOs/GenericDAO.class.php, test/misc/DAOTest.class.php: check for
	empty id in getById().

2008-12-21	Vladlen Y. Koshelev

	* main/Criteria/Criteria.class.php, test/main/CriteriaTest.class.php:
	addProjection() and corresponding tests added.

	* main/Criteria/Projections/ProjectionChain.class.php: isEmpty() added.

2008-12-18	Konstantin V. Arkhipov

	* core/Cache/AggregateCache.class.php: restore true randomness upon
	exit from guessLabel().

2008-12-18	Vladlen Y. Koshelev

	* core/Form/RegulatedForm.class.php: ruleExists() added.

2008-12-17	Vladlen Y. Koshelev

	* main/OQL/OqlQuery.class.php: bindNext() wrong index fix.

2008-12-16	Vladlen Y. Koshelev

	* main/Flow/DecoratorController.class.php: controller's decorator added,
	which may be commonly used for request filters.

2008-12-15	Konstantin V. Arkhipov

	* main/OQL/OqlQuery.class.php: bindNext() implemented.

2008-12-15	Evgeniy N. Sokolov

	* core/Form/Filters/: WordSplitterFilter added.

2008-12-15	Vladlen Y. Koshelev

	* main/base/AbstractProtoClass.class.php, test/misc/DAOTest.class.php:
	lazy property import fixed, related test added. 

	* meta/types/ObjectType.class.php: check if lazy property is enumeration
	using meta information (property's class might not be generated yet to check
	its type by ReflectionClass).

2008-12-05	Ivan Y. Khvostishkov

	* core/Base/Assert.class.php: isNotEmpty() added.

2008-12-01	Denis M. Gabaidulin

	* main/Utils/Mobile/MobileRequestDetektor.class.php: mobile request
	detektor added.

2008-11-23	Konstantin V. Arkhipov

	* main/DAOs/Workers/: key's generation extracted to makeIdKey() and