@@ -295,11 +295,7 @@
 		public function getTotalCount($expires = Cache::DO_NOT_CACHE)
 		{
 			$count = $this->getCustom(
-				OSQL::select()->
-				get(
-					SQLFunction::create('count', DBValue::create('*'))
-				)->
-				from($this->dao->getTable())
+				$this->dao->makeTotalCountQuery(), $expires
 			);
 			
 			return current($count);
